--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.19",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "concurrently": "^7.2.2",
-    "cross-env": "^7.0.3",
-    "tsc": "^2.0.4"
+    "cross-env": "^7.0.3"
   }
 }
